--- a/KinopoiskWpfApp.csproj
+++ b/KinopoiskWpfApp.csproj
@@ -99,6 +99,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
+    <Compile Include="Services\FavoritesService.cs" />
     <Compile Include="Services\KinopoiskService.cs" />
     <Compile Include="ViewModels\FavoritesViewModel.cs" />
     <Compile Include="ViewModels\FilmDetailsViewModel.cs" />
