--- a/KinopoiskWpfApp.csproj
+++ b/KinopoiskWpfApp.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
     <Compile Include="Models\Models.cs" />
     <Compile Include="Services\FavoritesService.cs" />
+    <Compile Include="Services\FilmsCacheService.cs" />
     <Compile Include="Services\FiltersCacheService.cs" />
     <Compile Include="Services\KinopoiskService.cs" />
     <Compile Include="ViewModels\FavoritesViewModel.cs" />
